# django-geolocation-fields

./: .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  PypiReadme.md  README.md  README.rst  apps.py  setup.cfg  setup.py  travis.yml
django_geolocation_fields.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/source/: conf.py  help.rst  index.rst  licence.rst
geolocation_fields/: settings.py  tests.py
geolocation_fields/forms/: fields.py  widgets.py
geolocation_fields/models/: base.py  fields.py  values_checks.py
geolocation_fields/static/widgets/css/: point.css
geolocation_fields/static/widgets/leaflet_implementations/: point.js  polygon.js
geolocation_fields/templates/widgets/: point.html  polygon.html
geolocation_fields/templates/widgets/map_control/: control.html
