[metadata]
name = django-geolocation-fields
version = 0.1.0
description = A Django app to work with geolocation fields without a spatial database.
long_description = file: README.rst
url = https://github.com/syk1k/django-geolocation-fields
author = GOUNTENI DAMBE TCHIMBIANDJA
author_email = dambemondo@gmail.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: